# Sanity

./: .dockerignore  .gitignore  BRANCHING.md  CRDT_ARCHITECTURE.md  CRDT_SYNC_FIXES.md  DEPLOYMENT.md  Dockerfile  IMAGE_SUPPORT.md  README.md  SYNC_DUPLICATION_FIX.md  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  svelte.config.js
.github/workflows/: tauri-linux-release.yml
server/: .env.example  Cargo.toml  Dockerfile
server/migrations/: 0001_notes.sql  0002_folders.sql  0003_folders_sync.sql  0004_crdt_states.sql
server/src/: main.rs
server/src/api/: auth.rs  folders.rs  mod.rs  notes.rs  sync.rs  sync_crdt.rs  sync_folders.rs
server/src/auth/: jwt.rs
server/src/db/: mod.rs  models.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs
src/lib/api/: NoteRepository.ts  adapterContext.ts  folders.ts  notes.ts
src/lib/api/adapters/: TauriAdapter.ts  WebAdapter.ts
src/lib/components/: CollaborativeEditor.svelte  MarkdownEditor.svelte  MarkdownPreview.svelte  SettingsModal.svelte  TitleBar.svelte  WysiwygEditor.css  WysiwygEditor.svelte
src/lib/stores/: folders.svelte.ts  notes.svelte.ts  settings.svelte.ts
src/lib/sync/: SyncStore.svelte.ts  WebSocketSyncProvider.ts  YjsDocManager.ts  index.ts
src/lib/types/: note.ts
src/lib/utils/: imageUpload.ts
src/routes/: +layout.svelte  +page.svelte
